2014-10-12 / 0.2.3

* Enhancements

  * Speed things up by just using && for bbox check; ST_Contains not needed.

2014-10-10 / 0.2.2

* Enhancements

  * Speed things up with an explicit bbox check followed by the buffer query

2014-10-09 / 0.2.1

* Bug fixes

  * Properly determine containers - before we were inadvertently drawing a box around container geoms, which resulted in false positives

2014-08-21 / 0.2.0

* Breaking changes

  * Switch to CREATE TABLE ... LIKE instead of materialized views

2014-08-20 / 0.1.2

* Bug fixes

  * Don't ignore custom name when you find an old view

* Enhancements

  * Provide MatryoshkaView::Record.cleanup

2014-08-20 / 0.1.1

* Enhancements

  * One weird trick to make ST_Contains slightly less strict (so that stuff on the border of a view counts as contained)

2014-08-20 / 0.1.0

* Breaking changes

  * MatryoshkaView#lookup now takes geom_source: or the_geom_geojson: arguments

* Bug fixes

  * Fix use of ST_Contains during view creation

0.0.1 / 2014-08-20

initial release