@@ -28,5 +28,5 @@ Gem::Specification.new do |spec|
   spec.add_development_dependency "pry"
   spec.add_development_dependency "rake", "~> 10.0"
   spec.add_development_dependency "rspec"
-  spec.add_development_dependency "the_geom_geojson"
+  spec.add_development_dependency "the_geom_geojson", '>=0.0.5'
 end
