@@ -1,3 +1,7 @@
+* Enhancements
+
+  * No need for ST_Expand with &&
+
 2014-10-12 / 0.2.3
 
 * Enhancements
